bindings/mojo/src/lib_proven.mojo

# SPDX-License-Identifier: PMPL-1.0-or-later
# Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <jonathan.jewell@open.ac.uk>

"""
Raw C FFI declarations for libproven.

This module defines the FFI result structs and low-level external_call wrappers
that map 1:1 to the C functions exported by libproven. All higher-level wrapper
modules (safe_math, safe_string, etc.) build on these primitives.

CRITICAL: No logic is reimplemented here. Every function delegates to libproven
via external_call. The Idris 2 core performs all computation.

Link against libproven.so or libproven.a at compile time.
"""

from memory import UnsafePointer


# =============================================================================
# Status Codes
# =============================================================================

alias PROVEN_OK: Int32 = 0
alias PROVEN_ERR_NULL_POINTER: Int32 = -1
alias PROVEN_ERR_INVALID_ARGUMENT: Int32 = -2
alias PROVEN_ERR_OVERFLOW: Int32 = -3
alias PROVEN_ERR_UNDERFLOW: Int32 = -4
alias PROVEN_ERR_DIVISION_BY_ZERO: Int32 = -5
alias PROVEN_ERR_PARSE_FAILURE: Int32 = -6
alias PROVEN_ERR_VALIDATION_FAILED: Int32 = -7
alias PROVEN_ERR_OUT_OF_BOUNDS: Int32 = -8
alias PROVEN_ERR_ENCODING_ERROR: Int32 = -9
alias PROVEN_ERR_ALLOCATION_FAILED: Int32 = -10
alias PROVEN_ERR_NOT_IMPLEMENTED: Int32 = -99


# =============================================================================
# ProvenError -- Mojo-idiomatic error representation
# =============================================================================


fn status_to_string(status: Int32) -> String:
    """Convert a Proven status code to a human-readable error string."""
    if status == PROVEN_OK:
        return "OK"
    if status == PROVEN_ERR_NULL_POINTER:
        return "null pointer"
    if status == PROVEN_ERR_INVALID_ARGUMENT:
        return "invalid argument"
    if status == PROVEN_ERR_OVERFLOW:
        return "overflow"
    if status == PROVEN_ERR_UNDERFLOW:
        return "underflow"
    if status == PROVEN_ERR_DIVISION_BY_ZERO:
        return "division by zero"
    if status == PROVEN_ERR_PARSE_FAILURE:
        return "parse failure"
    if status == PROVEN_ERR_VALIDATION_FAILED:
        return "validation failed"
    if status == PROVEN_ERR_OUT_OF_BOUNDS:
        return "out of bounds"
    if status == PROVEN_ERR_ENCODING_ERROR:
        return "encoding error"
    if status == PROVEN_ERR_ALLOCATION_FAILED:
        return "allocation failed"
    if status == PROVEN_ERR_NOT_IMPLEMENTED:
        return "not implemented"
    return "unknown error (code=" + str(Int(status)) + ")"


# =============================================================================
# Core Result Types (C ABI compatible)
# =============================================================================


@register_passable("trivial")
struct IntResult:
    """C ABI: struct { int32_t status; int64_t value; }."""

    var status: Int32
    var value: Int64

    fn __init__(out self, status: Int32, value: Int64):
        self.status = status
        self.value = value

    fn succeeded(self) -> Bool:
        """Return True if the operation succeeded (status == 0)."""
        return self.status == PROVEN_OK

    fn failed(self) -> Bool:
        """Return True if the operation failed (status != 0)."""
        return self.status != PROVEN_OK


@register_passable("trivial")
struct BoolResult:
    """C ABI: struct { int32_t status; bool value; }."""

    var status: Int32
    var value: Bool

    fn __init__(out self, status: Int32, value: Bool):
        self.status = status
        self.value = value

    fn succeeded(self) -> Bool:
        """Return True if the operation succeeded (status == 0)."""
        return self.status == PROVEN_OK

    fn failed(self) -> Bool:
        """Return True if the operation failed (status != 0)."""
        return self.status != PROVEN_OK


@register_passable("trivial")
struct StringResult:
    """C ABI: struct { int32_t status; char* value; size_t length; }."""

    var status: Int32
    var ptr: UnsafePointer[UInt8]
    var length: Int

    fn __init__(out self, status: Int32, ptr: UnsafePointer[UInt8], length: Int):
        self.status = status
        self.ptr = ptr
        self.length = length

    fn succeeded(self) -> Bool:
        """Return True if the operation succeeded (status == 0)."""
        return self.status == PROVEN_OK

    fn failed(self) -> Bool:
        """Return True if the operation failed (status != 0)."""
        return self.status != PROVEN_OK


@register_passable("trivial")
struct FloatResult:
    """C ABI: struct { int32_t status; double value; }."""

    var status: Int32
    var value: Float64

    fn __init__(out self, status: Int32, value: Float64):
        self.status = status
        self.value = value

    fn succeeded(self) -> Bool:
        """Return True if the operation succeeded (status == 0)."""
        return self.status == PROVEN_OK

    fn failed(self) -> Bool:
        """Return True if the operation failed (status != 0)."""
        return self.status != PROVEN_OK


@register_passable("trivial")
struct IPv4Address:
    """C ABI: struct { uint8_t octets[4]; }."""

    var o0: UInt8
    var o1: UInt8
    var o2: UInt8
    var o3: UInt8

    fn __init__(out self, o0: UInt8, o1: UInt8, o2: UInt8, o3: UInt8):
        self.o0 = o0
        self.o1 = o1
        self.o2 = o2
        self.o3 = o3

    fn __init__(out self):
        self.o0 = 0
        self.o1 = 0
        self.o2 = 0
        self.o3 = 0


@register_passable("trivial")
struct IPv4Result:
    """C ABI: struct { int32_t status; ProvenIPv4Address address; }."""

    var status: Int32
    var address: IPv4Address

    fn __init__(out self, status: Int32, address: IPv4Address):
        self.status = status
        self.address = address

    fn succeeded(self) -> Bool:
        """Return True if the operation succeeded (status == 0)."""
        return self.status == PROVEN_OK

    fn failed(self) -> Bool:
        """Return True if the operation failed (status != 0)."""
        return self.status != PROVEN_OK


@register_passable("trivial")
struct DateTime:
    """C ABI: ProvenDateTime struct for ISO 8601 date/time components."""

    var year: Int32
    var month: UInt8
    var day: UInt8
    var hour: UInt8
    var minute: UInt8
    var second: UInt8
    var nanosecond: UInt32
    var tz_offset_minutes: Int16

    fn __init__(
        out self,
        year: Int32,
        month: UInt8,
        day: UInt8,
        hour: UInt8,
        minute: UInt8,
        second: UInt8,
        nanosecond: UInt32,
        tz_offset_minutes: Int16,
    ):
        self.year = year
        self.month = month
        self.day = day
        self.hour = hour
        self.minute = minute
        self.second = second
        self.nanosecond = nanosecond
        self.tz_offset_minutes = tz_offset_minutes

    fn __init__(out self):
        self.year = 0
        self.month = 0
        self.day = 0
        self.hour = 0
        self.minute = 0
        self.second = 0
        self.nanosecond = 0
        self.tz_offset_minutes = 0


@register_passable("trivial")
struct DateTimeResult:
    """C ABI: struct { int32_t status; ProvenDateTime datetime; }."""

    var status: Int32
    var datetime: DateTime

    fn __init__(out self, status: Int32, datetime: DateTime):
        self.status = status
        self.datetime = datetime

    fn succeeded(self) -> Bool:
        """Return True if the operation succeeded (status == 0)."""
        return self.status == PROVEN_OK

    fn failed(self) -> Bool:
        """Return True if the operation failed (status != 0)."""
        return self.status != PROVEN_OK


# =============================================================================
# JSON type enumeration
# =============================================================================

alias PROVEN_JSON_NULL: Int32 = 0
alias PROVEN_JSON_BOOL: Int32 = 1
alias PROVEN_JSON_NUMBER: Int32 = 2
alias PROVEN_JSON_STRING: Int32 = 3
alias PROVEN_JSON_ARRAY: Int32 = 4
alias PROVEN_JSON_OBJECT: Int32 = 5
alias PROVEN_JSON_INVALID: Int32 = -1


# =============================================================================
# Lifecycle FFI
# =============================================================================


fn proven_init() -> Int32:
    """Initialize the Proven runtime. Must be called before other functions."""
    return external_call["proven_init", Int32]()


fn proven_deinit():
    """Shutdown the Proven runtime. Free all resources before calling."""
    external_call["proven_deinit", NoneType]()


fn proven_is_initialized() -> Bool:
    """Check if the Proven runtime has been initialized."""
    return external_call["proven_is_initialized", Bool]()


# =============================================================================
# Memory Management FFI
# =============================================================================


fn proven_free_string(ptr: UnsafePointer[UInt8]):
    """Free a string allocated by a Proven function. Safe to call with null."""
    external_call["proven_free_string", NoneType, UnsafePointer[UInt8]](ptr)


# =============================================================================
# Version FFI
# =============================================================================


fn proven_ffi_abi_version() -> UInt32:
    """Get FFI ABI version for compatibility checking."""
    return external_call["proven_ffi_abi_version", UInt32]()


fn proven_version_major() -> UInt32:
    """Get the library major version number."""
    return external_call["proven_version_major", UInt32]()


fn proven_version_minor() -> UInt32:
    """Get the library minor version number."""
    return external_call["proven_version_minor", UInt32]()


fn proven_version_patch() -> UInt32:
    """Get the library patch version number."""
    return external_call["proven_version_patch", UInt32]()


fn proven_module_count() -> UInt32:
    """Get total number of modules in the library."""
    return external_call["proven_module_count", UInt32]()


# =============================================================================
# SafeMath FFI
# =============================================================================


fn proven_math_add_checked(a: Int64, b: Int64) -> IntResult:
    """Checked addition with overflow detection. Delegates to libproven."""
    return external_call["proven_math_add_checked", IntResult, Int64, Int64](a, b)


fn proven_math_sub_checked(a: Int64, b: Int64) -> IntResult:
    """Checked subtraction with underflow detection. Delegates to libproven."""
    return external_call["proven_math_sub_checked", IntResult, Int64, Int64](a, b)


fn proven_math_mul_checked(a: Int64, b: Int64) -> IntResult:
    """Checked multiplication with overflow detection. Delegates to libproven."""
    return external_call["proven_math_mul_checked", IntResult, Int64, Int64](a, b)


fn proven_math_div(numerator: Int64, denominator: Int64) -> IntResult:
    """Safe integer division. Returns error on division by zero or overflow."""
    return external_call["proven_math_div", IntResult, Int64, Int64](
        numerator, denominator
    )


fn proven_math_mod(numerator: Int64, denominator: Int64) -> IntResult:
    """Safe modulo operation. Returns error on division by zero."""
    return external_call["proven_math_mod", IntResult, Int64, Int64](
        numerator, denominator
    )


fn proven_math_abs_safe(n: Int64) -> IntResult:
    """Safe absolute value. Returns error for INT64_MIN."""
    return external_call["proven_math_abs_safe", IntResult, Int64](n)


fn proven_math_clamp(lo: Int64, hi: Int64, value: Int64) -> Int64:
    """Clamp value to [lo, hi] range."""
    return external_call["proven_math_clamp", Int64, Int64, Int64, Int64](
        lo, hi, value
    )

